テストコードの作成とJUnitとカバレッジの実行。